implement review method for CSP user